# seed-viewer

./: .env.example  .gitignore  1.git  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  shdocker.sh
.claude/agent-memory/ui-modernizer/: MEMORY.md
backend/: pyproject.toml
backend/src/: globals.py  helpers.py  main.py
backend/src/metadata/: main.py
backend/src/storage_local/: __local_helpers.py  _g1csv.py  _metadata.py  _somabvh.py  _temporal_labels.py  main.py
docs/: backend.md  deployment.md  frontend.md  models-and-animation.md
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
frontend/public/: index.css  index.html  vite.config.ts
frontend/public/models3D/SOMA/: soma_male_skel_minimal.fbx
frontend/public/src/: animation.ts  customSkeletonHelper.js  debug.js  divider.ts  download_anim.ts  flakes_texture.ts  g1_animation.ts  globals.ts  helpers.ts  lighting_settings.ts  main.ts  metadata_viewer.ts  model_selector.ts  models.ts  projection_toggle.ts  settings_panel.ts  spinner.ts  temporal_labels.ts  theme.ts  threejs_builtin.js  timeline.js  view_cube.ts  viewport.ts
frontend/public/src/browser/: __createLocalFilesBrowser.ts  __getMetadataPage.ts  __loadAnimFromSelectedRow.ts  __loadRandomAnim.ts  __localGlobals.ts  __refreshBrowserTable.ts  __requestBVH.ts  __types.ts  __updateCurrentPage.ts  __updateMaxPages.ts  initBrowser.ts
frontend/tests/: fixes-test.spec.ts  g1-debug.spec.ts  g1-facing-direction.spec.ts  g1-faint-frame300.spec.ts  g1-model-switch.spec.ts  model-selector-alignment.spec.ts  soma-materials.spec.ts  temporal-label-segments.spec.ts  viewcube-layout-test.spec.ts  viewcube-test.spec.ts
soma/: bvh.py  parse_data_example_minimal.py  pyproject.toml
