[project]
name = "viewer-u"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bones Studio"},
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "certifi==2024.6.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "dnspython==2.6.1",
    "email-validator==2.1.2",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.4",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "idna==3.7",
    "Jinja2==3.1.4",
    "loguru==0.7.2",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mdurl==0.1.2",
    "orjson==3.10.5",
    "pyasn1==0.6.0",
    "pyasn1-modules==0.4.0",
    "pydantic==2.7.4",
    "pydantic-core==2.18.4",
    "Pygments==2.18.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "PyYAML==6.0.1",
    "requests==2.32.3",
    "rich==13.7.1",
    "rsa==4.9",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.37.2",
    "typer==0.12.3",
    "typing-extensions==4.12.2",
    "ujson==5.10.0",
    "urllib3==2.2.2",
    "uvicorn==0.30.1",
    "watchfiles==0.22.0",
    "websockets==12.0",
    "win32-setctime==1.1.0",
    "joblib>=1.4.2",
    "tqdm>=4.66.5",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "fastparquet>=2024.5.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
